# trivia

C++/: .gitignore  CMakeLists.txt  GameTests.cpp  README.md  TriviaGTests.cpp  doctest.h  makefile
java/src/main/java/com/adaptionsoft/games/trivia/: Game.java  GameRepo.java  GameRepos.java  Player.java  Players.java  Questions.java
java/src/main/java/com/adaptionsoft/games/trivia/runner/: GameRunner.java
java/src/main/java/com/adaptionsoft/games/uglytrivia/: Game.java  Player.java  Players.java  Questions.java
java/src/test/java/com/adaptionsoft/games/trivia/: GameRepoImpl.java  GameStep.java  SomeTest.java
java/src/test/resources/: game1.history  game_full.history  game_play_once.history  game_play_step2.history  game_play_step3.history  game_start.history
